fixing window size on mobile screens

--- a/public/css/screens.css
+++ b/public/css/screens.css
@@ -715,6 +715,10 @@ body.full div.logo {
 body.full div.logo img { height: 40px; width: auto; }
 
 @media (max-width: 768px) {
+    .phone .sms-response {
+        top: 75px;
+        bottom: 75px;
+    }
     .section { display: block; padding: 0; }
     .phone { position: fixed; width: 100%; height: 100%; top: 0; left: 0; margin-top: 0; }
     .phone .wireframe { display: none; }
